# scd41_Thread_send

./: CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  prj.conf
src/: main.c  scd4x_i2c.c  scd4x_i2c.h  sensirion_i2c.c  sensirion_i2c_hal.c
